<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="294dp"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin" >
<!-- semi-transparent -->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:background="#0533B5E5">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="140dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:text="@string/search"
        
        android:textAppearance="?android:attr/textAppearanceLarge" />
     <TextView
        android:id="@+id/textViewName"
        android:layout_width="75dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:textColor="#FFF"
        android:text="@string/appwidget_prefix_title_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="36dp"
        android:layout_height="38dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="12dp"
        android:layout_weight="1"
        android:background="@raw/ic_refresh" />

</LinearLayout>
    
<ListView
    android:id="@+id/mylist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

</ListView>
 <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:text="@string/empty_view_text"
            android:textSize="20sp" />

</LinearLayout> 